Добавлен модуль для выплат
